--- a/layout/_partial/post/copyright.ejs
+++ b/layout/_partial/post/copyright.ejs
@@ -13,7 +13,7 @@
     <% } %>
   </ul>
 </blockquote>
-<% if(theme.profile && theme.profile.enabled) { %>
+<% if(theme.profile && theme.profile.article_show) { %>
 <% var profile = theme.profile; %>
 <div class="panel panel-default panel-badger">
   <div class="panel-body">
