--- a/layout/_common/footer.ejs
+++ b/layout/_common/footer.ejs
@@ -5,7 +5,10 @@
         &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %>
         <% } %>
         <div class="publishby">
-        	<%= __('copyright.theme_by') %> <a href="https://github.com/cofess" target="_blank"> cofess </a><%= __('copyright.base_on') %> <a href="https://github.com/cofess/hexo-theme-pure" target="_blank">pure</a>.
+        	<%= __('copyright.powered_by') %> <a href="https://hexo.io/" target="_blank"> Hexo</a>. <%= __('copyright.theme_by') %> <a href="https://github.com/cofess/hexo-theme-pure" target="_blank">pure</a>.
         </div>
+        <% if(theme.coding.show) { %>
+        <p>Hosted by <a href="https://coding.net/pages" style="font-weight: bold">Coding Pages</a></p>
+        <% } %>
     </div>
 </footer>
