添加百度站点验证

--- a/layout/_common/head.ejs
+++ b/layout/_common/head.ejs
@@ -18,6 +18,9 @@
   <% if (theme.plugins.google_site_verification) { %>
   <meta name="google-site-verification" content="<%= theme.plugins.google_site_verification %>" />
   <% } %>
+  <% if (theme.plugins.baidu_site_verification) { %>
+  <meta name="baidu-site-verification" content="<%= theme.plugins.baidu_site_verification %>" />
+  <% } %>
   <%
   var title = page.title;
 
