--- a/layout/_common/script.ejs
+++ b/layout/_common/script.ejs
@@ -21,3 +21,4 @@ window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')
    <%- partial('_script/fancybox') %>
 <% } %>
 <%- partial('_script/analytics') %>
+<%- partial('_script/baidupush') %>
