--- a/layout/_partial/article-resume.ejs
+++ b/layout/_partial/article-resume.ejs
@@ -87,7 +87,7 @@
               <p class="decription"><%- theme.resume.opensource[i].decription %></p>
             </div>
             <div class="link-to">
-              <a href="<%- theme.resume.opensource[i].addr %>" class="button" target="_blank">瞧一瞧</a>
+              <a href="<%- theme.resume.opensource[i].addr %>" class="button" target="_blank">查看项目</a>
               <div class="shadow"></div>
             </div>
           </div>
