Add mermaid script.

--- a/layout/_common/script.ejs
+++ b/layout/_common/script.ejs
@@ -22,3 +22,4 @@ window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')
 <% } %>
 <%- partial('_script/analytics') %>
 <%- partial('_script/baidupush') %>
+<%- partial('_script/mermaid') %>
