--- a/layout/_partial/article-resume.ejs
+++ b/layout/_partial/article-resume.ejs
@@ -1,168 +1,203 @@
-<%- css('css/resume') %>
+<%- css('css/resume-style') %>
 <article class="container-resume">
-  <header></header>
 
-  <main>
-    <div class="information-all">
-      <div class="col-6-asb">
-        <div class="col-3 peasonal">
-          <img class="peasonal-image" src="<%- url_for('images/resume/peason.png') %>" alt="">
-        </div>
-        <div class="col-9 item">
-          <p class="title name">
-            教育经历
-          </p>
-          <div class="col-6">
-            <% for(var i in theme.resume.education) { %>
-              <p class="education"><%= theme.resume.education[i].name %></p>
-            <% } %>
-          </div>
-          <div class="col-6">
-            <% for(var i in theme.resume.education) { %>
-              <p class="profession"><%= theme.resume.education[i].profession %></p>
-            <% } %>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div class="col-6-asb">
-        <div class="col-6 ensprience">
-          <div class="item">
-            <p class="title">
-              发展方向
-            </p>
-            <ul>
-              <% var direction = theme.resume.direction.split(',') %>
-              <% for(var i in direction) { %>
-                <li><%- direction[i] %></li>
-              <% } %>
-            </ul>
-          </div>
-        </div>
-        <div class="col-6 skill">
-          <div class="item">
-              <p class="title">
-                  熟练语言
-              </p>
-              <div class="lang">
-                <% var proficiency = theme.resume.proficiency.split(',') %>
-                <% for(var i in proficiency) { %>
-                  <label><%- proficiency[i] %></label>
-                <% } %>
-              </div>
-          </div>
-        </div>
-      </div>
+  <!--BEGIN STICKER-->
+  <div id="sticker"></div>
+  <!--END STICKER-->
+
+  <!--BEGIN WRAPPER-->
+  <div id="wrapper">
+
+    <!--INTRODUCE NAME-->
+    <h2 id="titleName" class="sectionHead">简介</h2>
+
+    <!--BASE INFORMATION-->
+    <div id="bio">
+      <h2>全栈工程师 / 程序员</h2>
+
+      <!--BASE INFORMATION - PERSONAL INFORMATION-->
+      <p>
+        我是一个网页开发者，并且也是一个后端程序员，目前工作生活在郑州。
+        全栈工程师是我的目标， 让编程改变世界是我的理想。
+        在 CSDN 我是一个很活跃的用户，我很开心在那里可以写我的技术博客分享给大家。
+        除此之外，我还已经做过很多项目。
+        欢迎大家相互学习。
+      </p>
+      <!--END PERSONAL INFORMATION-->
     </div>
+    <!--END BASE INFORMATION-->
 
-    <section>
-      <div class="title project">
-        <p>项目经验</p>
-      </div>
-      <div class="project-detail">
-        <% var index = 0 %>
-        <% for(var i in theme.resume.project) { %>
-          <div class="col-3-abs" id="project-<%- index %>">
-            <div class="project-content"> <img class="project-detail-img" src="<%- url_for('images/resume/LOGO' + index + '.png') %>" alt="">
-              <p class="project-title"><%- theme.resume.project[i].title %></p>
-              <p class="create-time"><%- theme.resume.project[i].time %></p>
-              <p class="decription"><%- theme.resume.project[i].decription %></p>
-            </div>
-          </div>
-          <% index++ %>
-        <% } %>
-      </div>
-    </section>
+    <div class="clear"></div>
 
-    <section>
-      <div class="title project">
-        <p>开源项目</p>
-      </div>
-      <div class="project-detail">
-        <% var index = 0 %>
-        <% for(var i in theme.resume.opensource) { %>
-          <div class="col-3-abs" id="project-<%- index %>">
-            <div class="project-content"> <img class="project-detail-img" src="<%- url_for('images/resume/project' + index + '.png') %>" alt="">
-              <p class="project-title"><%- theme.resume.opensource[i].title %></p>
-              <p class="decription"><%- theme.resume.opensource[i].decription %></p>
-            </div>
-            <div class="link-to">
-              <a href="<%- theme.resume.opensource[i].addr %>" class="button" target="_blank">查看项目</a>
-              <div class="shadow"></div>
-            </div>
-          </div>
-          <% index++ %>
-        <% } %>
-      </div>
-    </section>
+    <!--SKILLS TITLE-->
+    <h2 id="tools" class="sectionHead">技能</h2>
+    <!--SKILLS-->
+    <ul id="skills">
+      <!--Notice: the class names indicate the % of your skills. i.e. s70 = 70%, s40 = 40% etc. -->
+      <li id="skill1" class="s95"><span>PHP</span></li>
+      <li id="skill2" class="s60"><span>Linux</span></li>
+      <li id="skill3" class="s75"><span>Python</span></li>
+      <li id="skill4" class="s90"><span>HTML + CSS</span></li>
+      <li id="skill5" class="s65"><span>jQuery</span></li>
+      <li id="skill6" class="s80"><span>Mysql</span></li>
+      <li id="skill7" class="s70"><span>Apache + Nginx</span></li>
+      <li id="skill8" class="s80"><span>Memcached + Redis</span></li>
+      <li id="skill9" class="s40"><span><del>Photoshop</del></span></li>
+    </ul>
+    <!--END SKILLS-->
 
-    <section>
-      <div class="title work">
-        <p>工作经历</p>
-      </div>
-      <div class="w-experience-detail">
-        <div class="item w-experience-content">
-          <div class="logo">
-            <img class="company-logo" src="<%- url_for('images/resume/LOGO4.png') %>" alt="">
-          </div>
-          <div class="work-content">
-            <p class="create-time">2017.8 - 至今</p>
-            <p class="job">Python 程序开发 | 成都一石数字有限公司</p>
-            <ul>
-              <li>基于 Django 框架设计规划人脸识别安防监控产品后端整体架构，开发安防平台后端所需的人脸检索、监控告警、消息推送、权限管理等各个功能</li>
-              <li>搭建基于 Vue 后台管理的前端开发框架，完善权限路由、动态响应、ESlint 代码规范等前端基础功能</li>
-              <li>维护公司的Git版本管理系统，应用Docker技术搭建公司的持续集成系统，优化和完善了公司的代码管理及开发流程</li>
-              <li>协助公司算法开发人员解决人脸识别算法模块开发过程中遇到的相关问题</li>
-            </ul>
-          </div>
+    <div class="clear"></div>
+
+    <!--EXPERIENCE TITLE-->
+    <h2 id="clock" class="sectionHead">工作经验</h2>
+    <!--EXPERIENCE-->
+    <ul id="jobs">
+      <li>
+        <div class="details">
+          <h3>郑州 WB 科技有限公司</h3>
+          <h4>PHP 工程师 - 郑州, 河南</h4>
+          <h5>Apr 2016 - 目前</h5>
         </div>
-
-        <div class="item w-experience-content">
-          <div class="logo">
-            <img class="company-logo" src="<%- url_for('images/resume/LOGO4.png') %>" alt="">
-          </div>
-          <div class="work-content">
-            <p class="create-time">2016.4 - 2017.6</p>
-            <p class="job">Linux 程序开发 | 中软国际有限公司</p>
-            <ul>
-              <li>独立开发了华为 OceanStor 9000 海量存储系统中基于 Python webPy 的账户自动化回收系统，通过 Restful API 对系统中多个管控不同模块的账户进行自动化回收。</li>
-              <li>参与华为 OceanStor 9000 海量存储系统大数据模块的日常维护，设计和开发基于 Python 和 shell 的运维脚本</li>
-              <li>参与华为 OceanStor 9000 海量存储系统底层的 Linux C 程序开发和单元测试代码编写工作</li>
-            </ul>
-          </div>
+        <p>主要从事PHP开发，参与项目中的需求分析、数据库设计、项目开发、对自己负责模块进行需求分析和解决方案的提供等工作。</p>
+      </li>
+      <li>
+        <div class="details">
+          <h3>MW 信息科技有限公司</h3>
+          <h4>后端工程师 - 厦门, 福建</h4>
+          <h5>Oct 2015 - Apr 2016</h5>
         </div>
-
-        <div class="item w-experience-content">
-          <div class="logo">
-            <img class="company-logo" src="<%- url_for('images/resume/LOGO5.png') %>" alt="">
-          </div>
-          <div class="work-content">
-            <p class="create-time">2014.9 - 2016.4</p>
-            <p class="job">Linux 嵌入式开发 | 四川金网通电子科技公司</p>
-            <ul>
-              <li>参与公司基于海思、博通等芯片的 Linux C 程序机顶盒的功能设计及软件编写工作</li>
-              <li>为机顶盒移植各个CA加密系统并通过CA厂商的认证，独立参与了永新视博CA系统的机顶盒移植和认证</li>
-              <li>协助各地的场测人员解决产品测试中出现各类机顶盒相关软件问题，直至通过当地的测试要求</li>
-            </ul>
-          </div>
+        <p>负责公司产品的技术研发和实现，设计开发移动互联网产品功能，项目接口以及PC端后台的开发。</p>
+      </li>
+      <li>
+        <div class="details">
+          <h3>Huixin 科技有限公司</h3>
+          <h4>软件工程师 - 东莞, 广东</h4>
+          <h5>Jul 2015 - Oct 2015</h5>
         </div>
-      </div>
-    </section>
-  </main>
+        <p>负责开发、维护、实施及测试网站系统，参与数据库设计工作，对部分PHP程序进行二次开发。</p>
+      </li>
+    </ul>
+    <!--END EXPERIENCE-->
 
-  <footer>
-    <section>
-      <div class="title about-me">
-        <p>联系我</p>
-      </div>
-      <div class="peasonal-message">
-        <p class="email" ><i class="icon icon-email" ></i> &nbsp;&nbsp;<%= theme.resume.email %></p>
-      </div>
-    </section>
-    <div class="img-header">
-      <div class="content">
-        <p>&lt;title&gt;<strong> ON THE WAY </strong>&lt;/title&gt;</p>
-      </div>
-    </div>
-  </footer>
+    <div class="clear"></div>
+
+    <!--EDUCATION TITLE-->
+    <h2 id="learn" class="sectionHead">教育背景</h2>
+    <!--EDUCATION-->
+    <ul id="schools">
+      <li>
+        <div class="details">
+          <h3>龙岩学院</h3>
+          <h4>学位头衔 - 学士</h4>
+          <h5>2011 - 2015</h5>
+        </div>
+        <p>主修计算机科学与技术专业，并取得学士学位。辅修物联网工程专业，专业知识扎实。</p>
+      </li>
+    </ul>
+    <!--END EDUCATION-->
+
+    <div class="clear"></div>
+
+    <!--HONORS / AWARDS TITLE-->
+    <h2 id="ribbon" class="sectionHead">荣誉 &amp; 奖励</h2>
+
+    <!--HONORS / AWARDS-->
+    <ul id="honorsAwards">
+      <li>第四届“华为杯”全国大学生智能设计竞赛 三等奖</li>
+      <li>第四届“锐智杯”福建省大学生嵌入式及智能设计大赛 一等奖</li>
+      <li>第四届“锐智杯”福建省大学生嵌入式及智能设计大赛 创新奖</li>
+      <li>第五届中国大学生服务外包创新创业大赛 三等奖</li>
+    </ul>
+    <!--END HONORS / AWARDS-->
+
+    <div class="clear"></div>
+
+    <!--AS SEEN ON TITLE-->
+    <h2 id="eye" class="sectionHead">项目经验</h2>
+    <!--PROJECT-->
+    <ul id="project">
+      <li>
+        <div class="details">
+          <h3>蝠众商城平台项目</h3>
+          <h4>PC端后台,Android/Ios APP</h4>
+          <h5>Mar 2017 - Oct 2017</h5>
+        </div>
+        <p>蝠众商城平台项目是一个在线商城项目，只存在移动端App,不存在网页浏览程序。我主要负责后台和移动端App接口的开发，目前项目已上线。</p>
+      </li>
+      <li>
+        <div class="details">
+          <h3>保险信息处理系统</h3>
+          <h4>PC端后台,微信端wap</h4>
+          <h5>Jan 2017 - Feb 2017</h5>
+        </div>
+        <p>保险信息处理系统主要功能是用于处理用户从微信端提交的保险申请信息，同意或是拒绝。此系统是我独立负责，从需求分析到项目开发最后到上线。</p>
+      </li>
+      <li>
+        <div class="details">
+          <h3>信瑞资本股票交易系统</h3>
+          <h4>PC端</h4>
+          <h5>Jun 2016 - Dec 2016</h5>
+        </div>
+        <p>信瑞资本系统是一个股票交易系统，使用通联数据获取股票数据信息。我主要负责数据库设计、项目后台开发、对自己负责模块进行需求分析和解决方案的提供。</p>
+      </li>
+    </ul>
+    <!--END PROJECT-->
+
+    <div class="clear"></div>
+
+    <!--RECOMMENDATIONS TITLE-->
+    <h2 id="chat" class="sectionHead">同事评语</h2>
+    <!--RECOMMENDATIONS-->
+    <ul id="recommends">
+      <li>
+        <h3>郑州 WB 科技有限公司</h3>
+      </li>
+      <li>
+        <div class="details">
+          <h3>李 XX</h3>
+          <h4>经理</h4>
+        </div>
+        <p>"他的工作能力很好，非常符合公司的发展需要。"</p>
+      </li>
+      <li>
+        <div class="details">
+          <h3>白 XX</h3>
+          <h4>项目经理</h4>
+        </div>
+        <p>"他的学习能力很好，开发中需要的新技术总是很快的就能学会应用，更是从来不拖延工期，这个非常棒。"</p>
+      </li>
+
+      <li>
+        <h3>MW 信息科技有限公司</h3>
+      </li>
+      <li>
+        <div class="details">
+          <h3>曹 XX</h3>
+          <h4>Java 工程师</h4>
+        </div>
+        <p>"他的逻辑思维能力非常好，编程能力也非常强，并且代码非常规范，就像他这个人一样。"</p>
+      </li>
+
+      <li>
+        <h3>Huixin 科技有限公司</h3>
+      </li>
+      <li>
+        <div class="details">
+          <h3>李 XX</h3>
+          <h4>经理</h4>
+        </div>
+        <p>"专业能力非常强，独立思考问题总是多方面的。总之是一个非常优秀的人。"</p>
+      </li>
+      <li>
+        <div class="details">
+          <h3>徐 XX</h3>
+          <h4>UI 设计师</h4>
+        </div>
+        <p>"和他对接工作非常流畅，团队协作的能力很好。不论在工作中还是生活中他都是一个值得深交的朋友。"</p>
+      </li>
+    </ul>
+    <!--END RECOMMENDATIONS-->
+
+  </div>
+  <!--END WRAPPER-->
 </article>
