--- a/source/css/resume-style.css
+++ b/source/css/resume-style.css
@@ -336,7 +336,7 @@ ul#recommends li > h3 {
     color: #ccc;
     padding-left: 5px;
     line-height: 25px;
-    margin: 0 0 30px -5px;
+    margin: 0 0 10px -5px;
 }
 
 /* -------------------------*/
@@ -599,6 +599,15 @@ li.s10 {
 /* --------------------------*/
 /*---GENERAL LAYOUT STUFF---*/
 /* ------------------------*/
+.container-resume ul {
+    padding-inline-start: 0;
+}
+
+.container-resume .icon {
+    padding-right: 10px;
+    font-weight: bold;
+}
+
 ul#jobs,
 ul#schools,
 ul#recommends,
@@ -612,7 +621,6 @@ ul#jobs li,
 ul#schools li,
 ul#project li,
 ul#recommends li {
-    margin: 0 0 20px 0;
     clear: both;
 }
 
@@ -621,7 +629,7 @@ ul#schools li .details,
 ul#project li .details,
 ul#recommends li .details {
     float: left;
-    width: 40%
+    width: 25%
 }
 
 ul#jobs li p,
@@ -629,12 +637,27 @@ ul#schools li > p,
 ul#project li > p,
 ul#recommends li > p {
     float: right;
-    width: 57%;
+    width: 70%;
     margin-bottom: 25px;
 }
 
 .details h5 {
     font-style: italic;
+}
+
+.details-list {
+    float: right;
+    width: 70%;
+}
+
+.details-list ul {
+    list-style-type:square;
+    margin-bottom: 25px;
+}
+
+.logo-project{
+    max-width: 100px;
+    padding-bottom: 20px;
 }
 
 /* ------------------------*/
@@ -710,13 +733,13 @@ body.respond ul#recommends li .details {
     width: 100%
 }
 
-body.respond ul#jobs li p,
-body.respond ul#schools li > p,
+body.respond ul#jobs li div,
+body.respond ul#schools li > div,
 body.respond ul#project li > p,
 body.respond ul#recommends li > p {
     float: none;
     width: 100%;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     margin-top: 10px;
 }
 
