调整开源项目布局

--- a/layout/_partial/article-resume.ejs
+++ b/layout/_partial/article-resume.ejs
@@ -97,7 +97,7 @@
         </li>
         <li>
           <div class="details">
-            <img class="logo-project" src="<%- url_for('images/resume/project' + index + '.png') %>" alt="">
+            <img class="logo-project" src="<%- url_for('images/resume/openproj-logo/project' + index + '.png') %>" alt="">
           </div>
           <P><%- profile.openprojects[index].description %></P>
         </li>
