清理不再使用的资源文件，resume页面添加邮箱显示

--- a/layout/_partial/article-resume.ejs
+++ b/layout/_partial/article-resume.ejs
@@ -15,6 +15,7 @@
     <!--BASE INFORMATION-->
     <div id="bio">
       <h2><%= profile.intro.title %></h2>
+      <h2>邮箱: <a href="mailto:<%- profile.intro.email %>"><%= profile.intro.email %></a></h2>
 
       <!--BASE INFORMATION - PERSONAL INFORMATION-->
       <p>
