--- a/layout/_partial/article-resume.ejs
+++ b/layout/_partial/article-resume.ejs
@@ -100,7 +100,7 @@
       </li>
       <li>
         <div class="details">
-          <img class="logo-project" src="<%- url_for('images/resume/openproj-logo/project' + index + '.png') %>" alt="">
+          <img class="logo-project" src="<%- profile.openprojects[index].logo %>" alt="">
         </div>
         <P><%- profile.openprojects[index].description %></P>
       </li>
